syntax = "proto3";

option java_package = "com.yhglobal.gongxiao.payment.microservice";
option java_outer_classname = "SupplierFrozenAccountServiceStructure";

import "payment.account.common.proto";
import "gongxiao.global.structure.proto";

service SupplierFrozenAccountService {

    // 查询单价折扣冻结账户和采购预留冻结账户的余额
    rpc getFrozenAccountAmount (GetFrozenAccountAmountReq) returns (GetFrozenAccountAmountResp) {
    }
    // 分页条件查询流水
    rpc getFrozenAccountFlow (GetFrozenAccountFlowReq) returns(GetFrozenAccountFlowResp) {
    }
    // 账户额度转出
    rpc accountTransferOut (AccountTransferOutReq) returns(AccountTransferOutResp) {
    }
    // 统计流水条数及金额
    rpc getFrozenAccountSubtotal (GetFrozenAccountSubtotalReq) returns(GetFrozenAccountSubtotalResp){}
}
// 查询账户
message GetFrozenAccountAmountReq{
    RpcHeader rpcHeader = 1;
    int64 projectId = 2; // 项目ID
}
message GetFrozenAccountAmountResp{
    int32 returnCode = 1; //返回码
    string msg = 2; //若调用不成功 错误信息
    double discountAccount = 3; // 单价折扣冻结账户
    double reservedAccount = 4; // 采购预留冻结账户
}
// 查询流水
message GetFrozenAccountFlowReq{
    RpcHeader rpcHeader = 1;
    string accountType = 2; // 账户类型
    string flowType = 3; // 流水类型
    int64 dateS = 4; // 开始日期
    int64 dateE = 5; // 结束日期
    int64 projectId = 6; // 项目ID
    int32 pageNum = 7; // 分页参数
    int32 pageSize = 8; // 分页参数
}
message GetFrozenAccountFlowResp{
    int32 pageNum = 1; // 分页参数
    int32 pageSize = 2; // 分页参数
    int32 size = 3; // 分页参数
    int32 startRow = 4;// 分页参数
    int32 endRow = 5;// 分页参数
    int64 total = 6;// 分页参数
    int32 pages = 7;// 分页参数
    repeated FrontPageFlow flowList = 8;// 查询的流水数据
    int32 returnCode = 9; //返回码
    string msg = 10; //若调用不成功 错误信息
}
// 账户额度转出
message AccountTransferOutReq{
    RpcHeader rpcHeader = 1;
    string accountType = 2;// 账户类型
    double transferOutAmount = 3;// 转出额度
    string remark  = 4;// 备注
    int64 projectId = 5; // 项目ID
}
message AccountTransferOutResp{
    int32 returnCode = 1; //返回码
    string msg = 2; //若调用不成功 错误信息
}
// 统计流水金额
message GetFrozenAccountSubtotalReq{
    RpcHeader rpcHeader = 1;
    string accountType = 2;// 账户类型
    string flowType = 3;// 流水类型
    int64 dateS = 4;// 开始日期
    int64 dateE = 5;// 结束日期
    int64 projectId = 6;
}
message GetFrozenAccountSubtotalResp{
    int32 returnCode = 1; //返回码
    string msg = 2; //若调用不成功 错误信息
    FrontPageFlowSubtotal subtotal = 3;// 流水统计数据
}


